crates/hir-ty/tests/snapshots/jls_switch__chained_colon_group_fallthrough.snap
---
source: crates/hir-ty/tests/jls_switch.rs
expression: out
---
FILE /src/com/example/Sw.java:
package com.example;

class Sw {
    int m(int i) {
        switch (i) {
            case 1:
                if (i < 0) {
                    return 1;
                }
            case 2:
                if (i == 0) {
                    return 2;
                }
            default:
                return 3;
        }
    }
}

method m(int): int
  locals: l0: int
  exprs: e0: int | e1: int | e2: int | e3: int | e4: boolean | e5: boolean | e6: int | e7: int | e8: int | e9: int | e10: boolean | e11: boolean | e12: int | e13: <error> | e14: int
