crates/hir-ty/tests/snapshots/jls_switch__conditional_label_constancy.snap
---
source: crates/hir-ty/tests/jls_switch.rs
expression: out
---
FILE /src/com/example/Sw.java:
package com.example;

class Sw {
    void m(int i) {
        final boolean flag = true & false;
        final int x = i;
        switch (i) {
            case false ? x : 2 -> f(0);
            case flag ? 1 : 2 -> f(1);
            case 2 -> f(1);
            default -> {}
        }
    }

    void f(int x) {}
}

method m(int): void
  locals: l0: int | l1: boolean | l2: int
  exprs: e0: boolean | e1: boolean | e2: boolean | e3: int | e4: int | e5: boolean | e6: int | e7: int | e8: int | e9: boolean | e10: int | e11: int | e12: int | e13: int | e14: int | e15: void | e16: <error>
  diags: e8@7:16: non-constant-case-label: case label must be a constant expression | e13@9:16: duplicate-case-label: duplicate case label: '2' has already been covered
method f(int): void
  locals: l3: int
  exprs:
