crates/hir-ty/tests/snapshots/jls_switch__duplicate_and_non_constant_labels.snap
---
source: crates/hir-ty/tests/jls_switch.rs
assertion_line: 218
expression: out
---
FILE /src/com/example/Sw.java:
package com.example;

class Sw {
    void m(int i) {
        int notConstant = 2;
        switch (i) {
            case 1 + 1 -> f(2);
            case 2 -> f(0);
            case notConstant -> f(1);
            default -> {}
        }
    }

    void f(int x) {}
}

method m(int): void
  locals: l0: int | l1: int
  exprs: e0: int | e1: int | e2: int | e3: int | e4: int | e5: int | e6: void | e7: int | e8: int | e9: void | e10: int | e11: int | e12: void | e13: <error>
  diags: e7@7:16: duplicate-case-label: duplicate case label: '2' has already been covered | e10@8:16: non-constant-case-label: case label must be a constant expression
method f(int): void
  locals: l2: int
  exprs:
