crates/hir-ty/tests/snapshots/jls_switch__fallthrough_tail_completes_method.snap
---
source: crates/hir-ty/tests/jls_switch.rs
expression: out
---
FILE /src/com/example/Sw.java:
package com.example;

class Sw {
    int m(int i) {
        switch (i) {
            case 1:
                return 10;
        }
        return 0;
    }
}

method m(int): int
  locals: l0: int
  exprs: e0: int | e1: int | e2: int | e3: int
