crates/hir-ty/tests/snapshots/jls_switch__shift_and_wrap_widths.snap
---
source: crates/hir-ty/tests/jls_switch.rs
expression: out
---
FILE /src/com/example/Sw.java:
package com.example;

class Sw {
    void m(int sel) {
        switch (sel) {
            case 1 << 35 -> f(0);
            case 8 -> f(0);
            case -1 >>> 28 -> f(1);
            case 15 -> f(1);
            case 65535 * 65535 -> f(2);
            case -131071 -> f(2);
            default -> {}
        }
    }

    void f(int x) {}
}

method m(int): void
  locals: l0: int
  exprs: e0: int | e1: int | e2: int | e3: int | e4: int | e5: void | e6: int | e7: int | e8: void | e9: int | e10: int | e11: int | e12: int | e13: int | e14: void | e15: int | e16: int | e17: void | e18: int | e19: int | e20: int | e21: int | e22: void | e23: int | e24: int | e25: int | e26: void | e27: <error>
  diags: e6@6:16: duplicate-case-label: duplicate case label: '8' has already been covered | e15@8:16: duplicate-case-label: duplicate case label: '15' has already been covered | e24@10:16: duplicate-case-label: duplicate case label: '-131071' has already been covered
method f(int): void
  locals: l1: int
  exprs:
